--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lodash": "^4.17.21",
         "mongoose": "^6.3.1",
         "morgan": "^1.10.0",
+        "redis": "^4.1.0",
         "winston": "^3.7.2"
     },
     "devDependencies": {
