--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-    "name": "project",
-    "version": "1.1.0",
-    "description": "",
     "main": "index.js",
     "type": "commonjs",
     "scripts": {
-        "start:dev": "nodemon ./index.js"
+        "start:dev": "nodemon ./src/index.js",
+        "test": "jest"
     },
-    "keywords": [],
-    "author": "",
     "license": "ISC",
     "dependencies": {
         "axios": "^0.27.2",
@@ -30,6 +26,7 @@
         "@types/mongoose": "^5.11.97",
         "@types/node": "^17.0.34",
         "@types/winston": "^2.4.4",
+        "jest": "^28.1.1",
         "nodemon": "^2.0.15"
     }
 }
