--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.17.3",
         "express-winston": "^4.2.0",
+        "formidable": "^2.0.1",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.21",
